Harden the authorization decision, the event transport and the security surface
Authorization now decides against exposure it can see. The snapshot read takes a
write lock, an approval reserves its own amount in two reservation columns, and a
cycle close drains them, so consecutive calls on one account test cumulative
exposure the way the nightly posting program did. The source formula, its narrowed
working precision, its refund sign convention and its four verbatim reason texts
are unchanged. Entitlement is checked after the presented card resolves to its
canonical account and before an identifier is allocated, so a refused caller
leaves no decision row and publishes no event. A dedicated acquirer identity
reaches every subject, while an ordinary identity reaches only the accounts and
cards its own authorities name.

The event transport is durable end to end. Every publisher port returns a
completion stage; the relay claims, sends and records inside one bounded pass; an
abandoned row records the dead-letter diagnostic it owes and the stamp that
settles it; and a replica listener commits the offset of a record it recovered.
The producer budget fits inside the relay pass. The ledger consumes the declined
stream and stores the reject record as the 350-byte block the source copies
verbatim plus its 80-byte trailer, and every consumer records its idempotency
marker against its own consumed topic. Six per-source dead-letter topics and one
shared fallback are provisioned rather than granted and left uncreated.

Every HTTP surface answers a client mistake with a status the caller can act on:
an unsupported method carries the allowed set, an unacceptable media type carries
no body, and one problem-document shape covers every refusal. Each service
declares its HTTP Basic scheme, refuses any password encoding but bcrypt and
pbkdf2 at start-up, refuses a card-token key it cannot use, requires a
first-party header on every state-changing request, and denies every route it
does 